<resources>
    <string name="app_name">mvvm-test</string>
    <string name="input_name">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="insert">保存</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="title">列表</string>
    <string name="edit_user">编辑用户</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
</resources>